[package]
name = "shelter_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration"}
anyhow = "1"
clap = "4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.13"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4" }
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tower-http = { version = "0.5.1", features = ["trace"] }
arc-swap = "1.6.0"
sea-orm = { version = "0.12.11", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }